@@ -570,13 +570,13 @@ static gpointer
 tny_camel_store_account_get_folders_async_thread (gpointer thr_user_data)
 {
 	GetFoldersInfo *info = (GetFoldersInfo*) thr_user_data;
-	GError *err;
+	GError *err = NULL;
 
 	tny_folder_store_get_folders (TNY_FOLDER_STORE (info->self),
 		info->list, info->query, &err);
 
 	if (err != NULL)
-		info->err = g_error_copy ((const GError *) &err);
+		info->err = g_error_copy ((const GError *) err);
 	else
 		info->err = NULL;
 
